--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,15 @@
 <div class="container">
-  <app-table [tableConfig]="tableConfig"></app-table>
-
+  <app-table [config]="tableConfig" [data]="data" (refresh)="getData($event)">
+    <tbody>
+      <tr *ngFor="let item of data;let i=index;">
+        <td>{{i+1}}</td>
+        <td>{{item.name}}</td>
+        <td>{{item.email}}</td>
+        <td>{{item.age}}</td>
+        <td>{{item.city}}</td>
+        <td>{{item.regDate | date}}</td>
+      </tr>
+    </tbody>
+  </app-table>
 </div>
+<br>
