--- a/src/app/data-table/table/table.component.html
+++ b/src/app/data-table/table/table.component.html
@@ -1,17 +1,11 @@
 <br>
-<div class="panel panel-default">
-    <div class="panel-heading bold">{{tableConfig.header}}</div>
-    <div class="panel-body no-padding">
-        <table class="table table-striped table-bordered datatable no-margin">
-            <tr>
-                <th *ngFor="let column of tableConfig.columns">{{column.label}}</th>
-            </tr>
-            <tr>
-                <td class="table-no-data" [colSpan]="tableConfig.columns.length" *ngIf="!data || !data.length">
-                    No Data To Show
-                </td>
-            </tr>
-        </table>
-    </div>
-    <div class="panel-footer" *ngIf="tableConfig.pagination">adsad</div>
+<div class="card">
+  <div class="card-header bold" *ngIf="config.title">{{config.title}}</div>
+  <div class="card-body no-padding">
+    <table class="table table-striped table-bordered datatable no-margin" style="width:100%;">
+      <thead app-table-header [config]="config" (sortChange)="onSortChange($event)"></thead>
+      <ng-content></ng-content>
+    </table>
+  </div>
+  <div class="card-footer" *ngIf="config.pagination">adsad</div>
 </div>
