--- a/src/app/data-table/table/table.component.scss
+++ b/src/app/data-table/table/table.component.scss
@@ -1,10 +1,22 @@
-.datatable{
-    border:0 !important;
+.datatable {
+    border: 0 !important;
 }
 
-.datatable .table-no-data{
-    padding:20px;
+.datatable .table-no-data {
+    padding: 20px;
     text-align: center;
     font-weight: bold;
     color: #899;
+}
+
+.no-padding {
+    padding: 0 !important;
+}
+
+.no-margin {
+    margin: 0 !important;
+}
+
+.bold {
+    font-weight: bold;
 }
