--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,1 @@
-.no-padding{
-    padding: 0 !important;
-}
-
-.no-margin{
-    margin: 0 !important;
-}
-
-.bold{
-    font-weight: bold;
-}
+/* You can add global styles to this file, and also import other style files */
